--- a/public/gcweb/samples/server-en.html
+++ b/public/gcweb/samples/server-en.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
-	<head>
-		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>We couldn't find that Web page - Canada.ca</title>
-		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<!-- Meta data -->
-		<meta name="robots" content="noindex, nofollow, noarchive">		
-		<!-- Meta data-->
-		<!-- Load closure template scripts -->
-		<!--
-			Note: a relative path is being used in this sample. In order to incorporate the script tags in your code, use the following absolute path (depending on the choice of domain). 
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" dir="ltr">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+    <title>We couldn't find that Web page - Canada.ca</title>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <!-- Meta data -->
+    <meta name="robots" content="noindex, nofollow, noarchive">
+    <!-- Meta data-->
+    <!-- Load closure template scripts -->
+    <!--
+			Note: a relative path is being used in this sample. In order to incorporate the script tags in your code, use the following absolute path (depending on the choice of domain).
 			This path can be used for the following three file names: soyutils.js, wet-en.js, and wet-fr.js.
 
 			canada.ca: https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/[file name]
@@ -24,88 +27,89 @@
 			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
 			templates.service.gc.ca: https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
 		-->
-		<script src="../compiled/soyutils.js"></script>
-		<script src="../compiled/wet-en.js"></script>
-		<noscript>
-			<!-- Write closure fall-back static file -->
-			<!-- refTop.html -->
-		</noscript>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod"
-			}));
-		</script>
-	</head>
-	<body vocab="https://schema.org/" typeof="WebPage">
-		<div id="def-top">
-			<!-- Write closure fall-back static file -->
-			<!-- top-en.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defTop = document.getElementById("def-top");
-			defTop.outerHTML = wet.builder.top({
-				"cdnEnv": "esdcprod",
-			    "breadcrumbs": false,
-				"lngLinks": [{
-					"lang": "fr",
-					"href": "server-fr.html",
-					"text": "Français"
-				}]
-			});
-		</script>
-		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-            <div class="row mrgn-tp-lg"> 
-                <div class="col-xs-3 col-sm-2 col-md-1 text-center mrgn-tp-md"> 
-                    <span class="glyphicon glyphicon-warning-sign glyphicon-error"></span> 
-                </div> 
-                <div class="col-xs-9 col-sm-10 col-md-11"> 
-                    <h1 class="mrgn-tp-md">We couldn't find that Web page</h1> 
-                    <p class="pagetag"><b>Error 404</b></p> 
-                </div> 
-            </div> 
-            <div class="row mrgn-bttm-lg"> 
-                <div class="col-md-12"> 
-                    <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you find what you're looking for. What next?</p> 
-                    <ul> 
-                        <li>Return to the <a href="https://canada.ca/en.html">home page</a>;</li> 
-                        <li>Consult the <a href="https://canada.ca/en/sitemap.html">site map</a>;</li> 
-                        <li>Check out the <a href="https://webarchive.bac-lac.gc.ca/?lang=en" rel="external">Government of Canada Web Archive</a> to view an older version; or</li> 
-                        <li><a href="https://canada.ca/en/contact.html">Contact us</a> and we'll help you out.</li> 
-                    </ul> 
-                </div> 
-			</div>
-			<div id="def-preFooter">
-				<!-- Write closure fall-back static file -->
-				<!-- preFooter-fr.html -->
-			</div>
-			<!-- Write closure template -->
-			<script>
-				var defPreFooter = document.getElementById("def-preFooter");
-				defPreFooter.outerHTML = wet.builder.preFooter({
-					"cdnEnv": "esdcprod",
-				    "pagedetails": false
-				});
-			</script>
-		</main>
-		<div id="def-footer">
-			<!-- Write closure fall-back static file -->
-			<!-- footer-en.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defFooter = document.getElementById("def-footer");
-			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod",
-			   "showFeatures": false
-			});
-		</script>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod"
-			}));
-		</script>
-	</body>
+    <script src="../compiled/soyutils.js"></script>
+    <script src="../compiled/wet-en.js"></script>
+    <noscript>
+        <!-- Write closure fall-back static file -->
+        <!-- refTop.html -->
+    </noscript>
+    <!-- Write closure template -->
+    <script>
+        document.write(wet.builder.refTop({
+            "cdnEnv": "esdcprod"
+        }));
+    </script>
+</head>
+
+<body vocab="https://schema.org/" typeof="WebPage">
+    <div id="def-top">
+        <!-- Write closure fall-back static file -->
+        <!-- top-en.html -->
+    </div>
+    <!-- Write closure template -->
+    <script>
+        var defTop = document.getElementById("def-top");
+        defTop.outerHTML = wet.builder.top({
+            "cdnEnv": "esdcprod",
+            "breadcrumbs": false,
+            "lngLinks": [{
+                "lang": "fr",
+                "href": "server-fr.html",
+                "text": "Français"
+            }]
+        });
+    </script>
+    <main property="mainContentOfPage" typeof="WebPageElement" class="container">
+        <div class="row mrgn-tp-lg">
+            <div class="col-xs-3 col-sm-2 col-md-1 text-center mrgn-tp-md">
+                <span class="glyphicon glyphicon-warning-sign glyphicon-error"></span>
+            </div>
+            <div class="col-xs-9 col-sm-10 col-md-11">
+                <h1 class="mrgn-tp-md">We couldn't find that Web page</h1>
+                <p class="pagetag"><b>Error 404</b></p>
+            </div>
+        </div>
+        <div class="row mrgn-bttm-lg">
+            <div class="col-md-12">
+                <p>We're sorry you ended up here. Sometimes a page gets moved or deleted, but hopefully we can help you
+                    find what you're looking for. What next?</p>
+                <ul>
+                    <li>Return to the <a href="https://canada.ca/en.html">home page</a>;</li>
+                    <li><a href="https://canada.ca/en/contact.html">Contact us</a> and we'll help you out.</li>
+                </ul>
+            </div>
+        </div>
+        <div id="def-preFooter">
+            <!-- Write closure fall-back static file -->
+            <!-- preFooter-fr.html -->
+        </div>
+        <!-- Write closure template -->
+        <script>
+            var defPreFooter = document.getElementById("def-preFooter");
+            defPreFooter.outerHTML = wet.builder.preFooter({
+                "cdnEnv": "esdcprod",
+                "pagedetails": false
+            });
+        </script>
+    </main>
+    <div id="def-footer">
+        <!-- Write closure fall-back static file -->
+        <!-- footer-en.html -->
+    </div>
+    <!-- Write closure template -->
+    <script>
+        var defFooter = document.getElementById("def-footer");
+        defFooter.outerHTML = wet.builder.footer({
+            "cdnEnv": "esdcprod",
+            "showFeatures": false
+        });
+    </script>
+    <!-- Write closure template -->
+    <script>
+        document.write(wet.builder.refFooter({
+            "cdnEnv": "esdcprod"
+        }));
+    </script>
+</body>
+
 </html>
