--- a/public/gcweb/samples/server-fr.html
+++ b/public/gcweb/samples/server-fr.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
-	<head>
-		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Nous ne pouvons trouver cette page Web - Canada.ca</title>
-		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<!-- Meta data -->
-		<meta name="robots" content="noindex, nofollow, noarchive">
-		<!-- Meta data-->
-		<!-- Load closure template scripts -->
-		<!--
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="fr" dir="ltr">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+    <title>Nous ne pouvons trouver cette page Web - Canada.ca</title>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <!-- Meta data -->
+    <meta name="robots" content="noindex, nofollow, noarchive">
+    <!-- Meta data-->
+    <!-- Load closure template scripts -->
+    <!--
 			Remarque : un chemin relatif est utilisé dans cet exemple. Afin d'intégrer les balises de script dans votre code, utilisez le chemin absolu suivant (selon le choix du domaine).
 			Ce chemin peut être utilisé pour les trois noms de fichiers suivants : soyutils.js, wet-en.js et wet-fr.js.
 
@@ -24,88 +27,90 @@
 			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
 			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
 		-->
-		<script src="../compiled/soyutils.js"></script>
-		<script src="../compiled/wet-fr.js"></script>
-		<noscript>
-			<!-- Write closure fall-back static file -->
-			<!-- refTop.html -->
-		</noscript>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod"
-			}));
-		</script>
-	</head>
-	<body vocab="https://schema.org/" typeof="WebPage">
-		<div id="def-top">
-			<!-- Write closure fall-back static file -->
-			<!-- top-fr.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defTop = document.getElementById("def-top");
-			defTop.outerHTML = wet.builder.top({
-				"cdnEnv": "esdcprod",
-				"breadcrumbs": false,
-				"lngLinks": [{
-					"lang": "en",
-					"href": "server-en.html",
-					"text": "English"
-				}]
-			});
-		</script>
-		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-				<div class="row mrgn-tp-lg"> 
-						<div class="col-xs-3 col-sm-2 col-md-1 text-center mrgn-tp-md"> 
-							<span class="glyphicon glyphicon-warning-sign glyphicon-error"></span> 
-						</div> 
-						<div class="col-xs-9 col-sm-10 col-md-11"> 
-							<h1 class="mrgn-tp-md">Nous ne pouvons trouver cette page Web</h1> 
-							<p class="pagetag"><b>Erreur 404</b></p> 
-						</div> 
-					</div> 
-					<div class="row mrgn-bttm-lg"> 
-						<div class="col-md-12"> 
-							<p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu’une page ait été déplacée ou supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez. Que faire?</p> 
-							<ul> 
-								<li>Retournez à la <a href="https://canada.ca/fr.html">page d’accueil</a>;</li> 
-								<li>Consultez le <a href="https://canada.ca/fr/plan.html">plan du site</a>;</li> 
-								<li>Vérifiez dans les <a href="https://www.bac-lac.gc.ca/fra/decouvrez/archives-web-gouvernment/Pages/archives-web.aspx">Archives Web du gouvernement du Canada</a> s’il existe une version antérieure;</li> 
-								<li><a href="https://canada.ca/fr/contact.html">Communiquez avec nous</a> pour obtenir de l’aide.</li> 
-							</ul> 
-						</div> 
-					</div>
-			<div id="def-preFooter">
-				<!-- Write closure fall-back static file -->
-				<!-- preFooter-fr.html -->
-			</div>
-			<!-- Write closure template -->
-			<script>
-				var defPreFooter = document.getElementById("def-preFooter");
-				defPreFooter.outerHTML = wet.builder.preFooter({
-					"cdnEnv": "esdcprod",
-				    "pagedetails": false
-				});
-			</script>
-		</main>
-		<div id="def-footer">
-			<!-- Write closure fall-back static file -->
-			<!-- footer-fr.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defFooter = document.getElementById("def-footer");
-			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod",
-				"showFeatures": false
-			});
-		</script>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod"
-			}));
-		</script>
-	</body>
+    <script src="../compiled/soyutils.js"></script>
+    <script src="../compiled/wet-fr.js"></script>
+    <noscript>
+        <!-- Write closure fall-back static file -->
+        <!-- refTop.html -->
+    </noscript>
+    <!-- Write closure template -->
+    <script>
+        document.write(wet.builder.refTop({
+            "cdnEnv": "esdcprod"
+        }));
+    </script>
+</head>
+
+<body vocab="https://schema.org/" typeof="WebPage">
+    <div id="def-top">
+        <!-- Write closure fall-back static file -->
+        <!-- top-fr.html -->
+    </div>
+    <!-- Write closure template -->
+    <script>
+        var defTop = document.getElementById("def-top");
+        defTop.outerHTML = wet.builder.top({
+            "cdnEnv": "esdcprod",
+            "breadcrumbs": false,
+            "lngLinks": [{
+                "lang": "en",
+                "href": "server-en.html",
+                "text": "English"
+            }]
+        });
+    </script>
+    <main property="mainContentOfPage" typeof="WebPageElement" class="container">
+        <div class="row mrgn-tp-lg">
+            <div class="col-xs-3 col-sm-2 col-md-1 text-center mrgn-tp-md">
+                <span class="glyphicon glyphicon-warning-sign glyphicon-error"></span>
+            </div>
+            <div class="col-xs-9 col-sm-10 col-md-11">
+                <h1 class="mrgn-tp-md">Nous ne pouvons trouver cette page Web</h1>
+                <p class="pagetag"><b>Erreur 404</b></p>
+            </div>
+        </div>
+        <div class="row mrgn-bttm-lg">
+            <div class="col-md-12">
+                <p>Nous sommes désolés que vous ayez abouti ici. Il arrive parfois qu’une page ait été déplacée ou
+                    supprimée. Heureusement, nous pouvons vous aider à trouver ce que vous cherchez. Que faire?</p>
+                <ul>
+                    <li>Retournez à la <a href="https://canada.ca/fr.html">page d’accueil</a>;</li>
+                    <li><a href="https://canada.ca/fr/contact.html">Communiquez avec nous</a> pour obtenir de l’aide.
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="def-preFooter">
+            <!-- Write closure fall-back static file -->
+            <!-- preFooter-fr.html -->
+        </div>
+        <!-- Write closure template -->
+        <script>
+            var defPreFooter = document.getElementById("def-preFooter");
+            defPreFooter.outerHTML = wet.builder.preFooter({
+                "cdnEnv": "esdcprod",
+                "pagedetails": false
+            });
+        </script>
+    </main>
+    <div id="def-footer">
+        <!-- Write closure fall-back static file -->
+        <!-- footer-fr.html -->
+    </div>
+    <!-- Write closure template -->
+    <script>
+        var defFooter = document.getElementById("def-footer");
+        defFooter.outerHTML = wet.builder.footer({
+            "cdnEnv": "esdcprod",
+            "showFeatures": false
+        });
+    </script>
+    <!-- Write closure template -->
+    <script>
+        document.write(wet.builder.refFooter({
+            "cdnEnv": "esdcprod"
+        }));
+    </script>
+</body>
+
 </html>
